# getresponse-api-wrapper

./: .bandit.yml  .gitignore  README.md  env.sample  pyproject.toml
.circleci/: config.yml
getresponse_api_wrapper/: client.py  enum.py  exceptions.py  helper.py  hooks.py  request.py  settings.py  validators.py
getresponse_api_wrapper/resources/: __init__.py  accounts.py  multimedia.py
tests/: conftest.py  helper.py  test_baseresource.py  test_config.py  test_error_codes_enum.py  test_exceptions.py  test_getresponse_api_wrapper.py  test_getresponse_client.py  test_helper.py  test_hooks.py  test_request.py  test_resources_accounts.py  test_resources_multimedia.py  test_validator.py
