[tool.poetry]
name = "getresponse-api-wrapper"
version = "0.1.0"
description = ""
authors = ["Isaque Alves <isaquealves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
