[tool.poetry]
name = "getresponse-api-wrapper"
version = "0.1.0"
description = ""
authors = ["Isaque Alves <isaquealves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31"
python-decouple = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-pudb = "^0.7.0"
pytest-black = "^0.3.7"
pytest-cov = "^2.8"
ipython = "^7.8"
bandit = "^1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
